--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2017 Bartek Fabiszewski
   ~ http://www.fabiszewski.net
@@ -9,110 +8,110 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="button_start">Start</string>
+    <string name="button_stop">Stop</string>
+    <string name="button_newtrack">Nowa trasa</string>
+    <string name="button_upload">Wyślij</string>
+    <string name="is_running" comment="substituted app_name">%s jest uruchomiony</string>
+    <string name="title_newtrack">Nowa trasa</string>
+    <string name="label_track">Bieżąca trasa</string>
+    <string name="label_newtrack_name">Nazwa nowej trasy</string>
+    <string name="label_name">Nazwa</string>
+    <string name="label_last_update">Ostatnia aktualizacja: %s</string>
+    <string name="label_synchronized">Wszystko wysłane</string>
+    <string name="cancel">Anuluj</string>
+    <string name="submit">Zatwierdź</string>
+    <string name="ok">OK</string>
+    <string name="settings">Ustawienia</string>
+    <string name="pref_username_title">Nazwa użytkownika</string>
+    <string name="pref_username_summary">Nazwa użytkownika na serwerze</string>
+    <string name="pref_pass_title">Hasło</string>
+    <string name="pref_pass_summary">Hasło użytkownika na serwerze</string>
+    <string name="pref_host_title">Adres serwera</string>
+    <string name="pref_host_summary">Adres zdalnego serwera</string>
+    <string name="pref_mintime_title">Minimalny czas</string>
+    <string name="pref_mintime_summary">Minimalny czas pomiędzy kolejnymi pozycjami</string>
+    <string name="pref_mindistance_title">Minimalna odległość</string>
+    <string name="pref_mindistance_summary">Minimalna odległość pomiędzy kolejnymi pozycjami</string>
+    <string name="pref_minaccuracy_title">Minimalna dokładność</string>
+    <string name="pref_minaccuracy_summary">Minimalna dokładność pozycji</string>
+    <string name="pref_livesync_title">Ciągła synchronizacja</string>
+    <string name="pref_livesync_summary">Wysyłanie pozycji na serwer w czasie rzeczywistym. Wymaga podania użytkownika, hasła i adresu serwera.</string>
+    <string name="pref_autostart_title">Auto start</string>
+    <string name="pref_autostart_summary">Aplikacja zostanie uruchomiona przy starcie systemu</string>
+    <string name="pref_provider_title">Usługa lokalizacji</string>
+    <string name="pref_provider_summary">Współrzędne geograficzne mogą być otrzymywana z GPS-a, z sieci (GSM/wifi), lub z obu na raz. Zaznaczenie obu może dać lepsze rezultaty, jednak kosztem większego zużycia baterii.</string>
+    <string name="pref_units_title">Jednostki</string>
+    <string name="pref_units_summary">Preferowane jednostki miary do wyświetlania statystyk</string>
+    <string name="pref_units_metric">Metryczne</string>
+    <string name="pref_units_imperial">Anglosaskie</string>
+    <string name="pref_units_nautical">Nawigacyjne</string>
+    <string name="label_status">Status</string>
+    <string name="label_location">Lokalizacja</string>
+    <string name="label_synchronization">Synchronizacja</string>
+    <string name="tracking_stopped">Zapis zatrzymany</string>
+    <string name="tracking_started">Zapis włączony</string>
+    <string name="uploading_started">Wysyłanie rozpoczęte</string>
+    <string name="nothing_to_synchronize">Nie ma nic do synchronizacji</string>
+    <string name="no_positions">Bieżąca trasa nie ma żadnych pozycji</string>
+    <string name="warning">Uwaga</string>
+    <string name="notsync_warning">Bieżąca trasa zawiera niezsynchronizowane pozycje. Rozpoczęcie nowej trasy usunie wszystkie dane.</string>
+    <string name="empty_trackname_warning">Najpierw rozpocznij nową trasę</string>
+    <string name="logger_running_warning">Proszę najpierw zatrzymać zapisywanie bieżącej trasy</string>
     <string name="about">O programie</string>
     <string name="about_description">Prosty program do zapisu pozycji geograficznej z funkcją przesyłania współrzędnych na własny <xliff:g id="server_link_open"><![CDATA[<a href="https://github.com/bfabiszewski/ulogger-server">]]></xliff:g>serwer μlogger<xliff:g id="server_link_close"><![CDATA[</a>]]></xliff:g>.</string>
     <string name="about_description2">Więcej informacji oraz pomoc na stronie <xliff:g id="app_link_open"><![CDATA[<a href="https://github.com/bfabiszewski/ulogger-android">]]></xliff:g>projektu μlogger<xliff:g id="app_link_close"><![CDATA[</a>]]></xliff:g>.</string>
-    <string name="about_license">Licencja: GPL</string>
     <string name="about_version">Wersja %s</string>
-    <string name="button_newtrack">Nowa trasa</string>
-    <string name="button_start">Start</string>
-    <string name="button_stop">Stop</string>
-    <string name="button_upload">Wyślij</string>
-    <string name="cancel">Anuluj</string>
-    <string name="e_auth_failure">Błąd autoryzacji: %d</string>
-    <string name="e_bad_url">Nieprawidłowy URL: %s</string>
-    <string name="e_connect">Błąd połączenia: %s</string>
-    <string name="e_external_not_writable">Błąd zapisu do zewnętrznego nośnika</string>
-    <string name="e_http_code">Kod błędu HTTP: %d</string>
-    <string name="e_illegal_redirect">Błąd przekierowania: %d</string>
-    <string name="e_output_dir">Błąd utworzenia folderu</string>
-    <string name="e_server_response">Błędna odpowiedź serwera</string>
-    <string name="e_unknown_host">Nieznany host: %s</string>
-    <string name="empty_trackname_warning">Najpierw rozpocznij nową trasę</string>
-    <string name="export">Eksport do GPX</string>
-    <string name="export_done">Trasa pomyślnie zapisana do folderu „Pobrane”</string>
-    <string name="export_failed">Błąd eksportu</string>
-    <string name="export_started">Eksport rozpoczęty</string>
-    <string name="gps_disabled_warning">Uwaga: GPS jest wyłączony</string>
-    <string name="is_running">%s jest uruchomiony</string>
-    <string name="label_last_update">Ostatnia aktualizacja: %s</string>
-    <string name="label_location">Lokalizacja</string>
-    <string name="label_name">Nazwa</string>
-    <string name="label_newtrack_name">Nazwa nowej trasy</string>
-    <plurals name="label_positions_behind">
-        <item quantity="one">Została %d pozycja</item>
-        <item quantity="few">Zostały %d pozycje</item>
-        <item quantity="many">Zostało %d pozycji</item>
-        <item quantity="other">Zostało %d pozycji</item>
-    </plurals>
-    <string name="label_status">Status</string>
-    <string name="label_synchronization">Synchronizacja</string>
-    <string name="label_synchronized">Wszystko wysłane</string>
-    <string name="label_track">Bieżąca trasa</string>
-    <string name="location_disabled">Należy włączyć przynajmniej jedną usługę lokalizacji</string>
-    <string name="location_permission_denied">Należy zaakceptować zgodę na dostęp do lokalizacji</string>
-    <string name="logger_running_warning">Proszę najpierw zatrzymać zapisywanie bieżącej trasy</string>
-    <string name="net_disabled_warning">Uwaga: usługa lokalizacji wg sieci jest wyłączona</string>
-    <string name="no_positions">Bieżąca trasa nie ma żadnych pozycji</string>
-    <string name="nothing_to_export">Nie ma nic do wyeksportowania</string>
-    <string name="nothing_to_synchronize">Nie ma nic do synchronizacji</string>
-    <string name="notsync_warning">Bieżąca trasa zawiera niezsynchronizowane pozycje. Rozpoczęcie nowej trasy usunie wszystkie dane.</string>
-    <string name="ok">OK</string>
-    <string name="pref_autostart_summary">Aplikacja zostanie uruchomiona przy starcie systemu</string>
-    <string name="pref_autostart_title">Auto start</string>
-    <string name="pref_host_summary">Adres zdalnego serwera</string>
-    <string name="pref_host_title">Adres serwera</string>
-    <string name="pref_livesync_summary">Wysyłanie pozycji na serwer w czasie rzeczywistym. Wymaga podania użytkownika, hasła i adresu serwera.</string>
-    <string name="pref_livesync_title">Ciągła synchronizacja</string>
-    <string name="pref_minaccuracy_summary">Minimalna dokładność pozycji</string>
-    <string name="pref_minaccuracy_title">Minimalna dokładność</string>
-    <string name="pref_mindistance_summary">Minimalna odległość pomiędzy kolejnymi pozycjami</string>
-    <string name="pref_mindistance_title">Minimalna odległość</string>
-    <string name="pref_mintime_summary">Minimalny czas pomiędzy kolejnymi pozycjami</string>
-    <string name="pref_mintime_title">Minimalny czas</string>
-    <string name="pref_pass_summary">Hasło użytkownika na serwerze</string>
-    <string name="pref_pass_title">Hasło</string>
-    <string name="pref_provider_summary">Współrzędne geograficzne mogą być otrzymywana z GPS-a, z sieci (GSM/wifi), lub z obu na raz. Zaznaczenie obu może dać lepsze rezultaty, jednak kosztem większego zużycia baterii.</string>
-    <string name="pref_provider_title">Usługa lokalizacji</string>
-    <string name="pref_units_imperial">Anglosaskie</string>
-    <string name="pref_units_metric">Metryczne</string>
-    <string name="pref_units_summary">Preferowane jednostki miary do wyświetlania statystyk</string>
-    <string name="pref_units_title">Jednostki</string>
-    <string name="pref_username_summary">Nazwa użytkownika na serwerze</string>
-    <string name="pref_username_title">Nazwa użytkownika</string>
-    <string name="provide_user_pass_url">Proszę najpierw uzupełnić nazwę użytkownika, hasło i adres serwera</string>
-    <string name="provide_valid_url">Proszę podać poprawny adres serwera</string>
-    <string name="settings">Ustawienia</string>
-    <string name="submit">Zatwierdź</string>
-    <string name="summary_distance">%1$s %2$s</string>
-    <string name="summary_duration">%1$d h %2$d min</string>
+    <string name="about_license">Licencja: GPL</string>
+    <string name="uploading_failed">Błąd wysyłania</string>
+    <string name="uploading_done">Wysyłanie zakończone</string>
+    <string name="track_summary">Podsumowanie trasy</string>
+    <string name="summary_distance" comment="1-distance, 2-unit name">%1$s %2$s</string>
     <plurals name="summary_positions">
         <item quantity="one">%d pozycja</item>
         <item quantity="few">%d pozycje</item>
         <item quantity="many">%d pozycji</item>
         <item quantity="other">%d pozycji</item>
     </plurals>
-    <string name="title_newtrack">Nowa trasa</string>
-    <string name="track_summary">Podsumowanie trasy</string>
-    <string name="tracking_started">Zapis włączony</string>
-    <string name="tracking_stopped">Zapis zatrzymany</string>
+    <string name="summary_duration">%1$d h %2$d min</string>
     <string name="unit_kilometer">km</string>
     <string name="unit_mile">mi</string>
-    <string name="unknown_track">Nieznana trasa</string>
-    <string name="uploading_done">Wysyłanie zakończone</string>
-    <string name="uploading_failed">Błąd wysyłania</string>
-    <string name="uploading_started">Wysyłanie rozpoczęte</string>
-    <string name="using_gps">Uzyskano dostęp do lokalizacji z GPS-a</string>
-    <string name="warning">Uwaga</string>
+    <string name="provide_valid_url">Proszę podać poprawny adres serwera</string>
+    <string name="provide_user_pass_url">Proszę najpierw uzupełnić nazwę użytkownika, hasło i adres serwera</string>
+    <string name="e_illegal_redirect">Błąd przekierowania: %d</string>
+    <string name="e_auth_failure">Błąd autoryzacji: %d</string>
+    <string name="e_http_code">Kod błędu HTTP: %d</string>
+    <string name="e_server_response">Błędna odpowiedź serwera</string>
+    <string name="e_unknown_host">Nieznany host: %s</string>
+    <string name="e_bad_url">Nieprawidłowy URL: %s</string>
+    <string name="e_connect">Błąd połączenia: %s</string>
+    <string name="gps_disabled_warning">Uwaga: GPS jest wyłączony</string>
+    <string name="net_disabled_warning">Uwaga: usługa lokalizacji wg sieci jest wyłączona</string>
+    <string name="location_disabled">Należy włączyć przynajmniej jedną usługę lokalizacji</string>
+    <string name="location_permission_denied">Należy zaakceptować zgodę na dostęp do lokalizacji</string>
     <string name="write_permission_denied">Należy wyrazić zgodę na zapis do zewnętrznego nośnika</string>
     <string name="using_network">Uzyskano dostęp do lokalizacji z sieci</string>
+    <string name="using_gps">Uzyskano dostęp do lokalizacji z GPS-a</string>
+    <string name="export">Eksport do GPX</string>
+    <string name="nothing_to_export">Nie ma nic do wyeksportowania</string>
+    <string name="export_done">Trasa pomyślnie zapisana do folderu „Pobrane”</string>
+    <string name="export_failed">Błąd eksportu</string>
+    <string name="e_output_dir">Błąd utworzenia folderu</string>
+    <string name="e_external_not_writable">Błąd zapisu do zewnętrznego nośnika</string>
+    <string name="unknown_track">Nieznana trasa</string>
+    <string name="export_started">Eksport rozpoczęty</string>
+    <plurals name="label_positions_behind">
+        <item quantity="one">Została %d pozycja</item>
+        <item quantity="few">Zostały %d pozycje</item>
+        <item quantity="many">Zostało %d pozycji</item>
+        <item quantity="other">Zostało %d pozycji</item>
+    </plurals>
     <string name="track_server_setup_warning">Uwaga! Po zmianie ustawień serwera synchronizacja bieżącej trasy może się nie powieść.</string>
     <string name="pref_mintime_other">Minimalny czas w sekundach</string>
     <string name="pref_mindistance_other">Minimalna odległość w metrach</string>
     <string name="pref_minaccuracy_other">Minimalna dokładność w metrach</string>
-    <string name="pref_units_nautical">Nawigacyjne</string>
     <string name="unit_nmile">Mm</string>
+    <string name="pref_cat_location">Śledzenie pozycji</string>
     <string name="pref_cat_server">Serwer</string>
     <string name="pref_cat_other">Inne</string>
-    <string name="pref_cat_location">Śledzenie pozycji</string>
 </resources>
