--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -7,7 +7,7 @@
   ~ See <http://www.gnu.org/licenses/>
   -->
 
-<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="button_start">Enregistrer</string>
     <string name="button_stop">Arrêter</string>
     <string name="button_newtrack">Nouvelle piste</string>
@@ -45,6 +45,7 @@
     <string name="pref_units_summary">Unités préférées pour afficher le résumé de la piste</string>
     <string name="pref_units_metric">Mètre</string>
     <string name="pref_units_imperial">Impérial</string>
+    <string name="pref_units_nautical">Système nautique</string>
     <string name="label_status">Statut</string>
     <string name="label_location">Localisation</string>
     <string name="label_synchronization">Synchronisation</string>
@@ -66,7 +67,7 @@
     <string name="uploading_done">Envoi effectué</string>
     <string name="track_summary">Résumé de la piste</string>
     <string name="summary_distance" comment="1-distance, 2-unit name">%1$s %2$s</string>
-    <plurals name="summary_positions" tools:ignore="UnusedQuantity">
+    <plurals name="summary_positions">
         <item quantity="one">%d position</item>
         <item quantity="other">%d positions</item>
     </plurals>
@@ -97,17 +98,16 @@
     <string name="e_external_not_writable">Impossible d\'écrire sur le stockage externe</string>
     <string name="unknown_track">Piste inconnue</string>
     <string name="export_started">Export débuté</string>
-    <plurals name="label_positions_behind" tools:ignore="UnusedQuantity">
+    <plurals name="label_positions_behind">
         <item quantity="one">%d position derrière</item>
         <item quantity="other">%d positions derrière</item>
     </plurals>
-    <string name="pref_units_nautical">Système nautique</string>
-    <string name="pref_cat_other">Autres</string>
-    <string name="pref_cat_server">Serveur</string>
-    <string name="pref_cat_location">Suivi de localisation</string>
-    <string name="unit_nmile">nm</string>
+    <string name="track_server_setup_warning">Si vous modifiez la configuration du serveur, vous ne pourrez peut-être pas synchroniser la piste en cours.</string>
     <string name="pref_mintime_other">Intervalle de temps minimum en secondes</string>
     <string name="pref_mindistance_other">Distance minimum en mètres</string>
     <string name="pref_minaccuracy_other">Précision minimum en mètres</string>
-    <string name="track_server_setup_warning">Si vous modifiez la configuration du serveur, vous ne pourrez peut-être pas synchroniser la piste en cours.</string>
+    <string name="unit_nmile">nm</string>
+    <string name="pref_cat_location">Suivi de localisation</string>
+    <string name="pref_cat_server">Serveur</string>
+    <string name="pref_cat_other">Autres</string>
 </resources>
