--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -114,4 +114,5 @@
     <string name="pref_cat_location">Śledzenie pozycji</string>
     <string name="pref_cat_server">Serwer</string>
     <string name="pref_cat_other">Inne</string>
+    <string name="e_illegal_state">Błędny stan: %s</string>
 </resources>
